nginx-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-resource
  namespace: eks-sample-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-proxy-protocol: 'true'
spec:
  tls:
    - hosts:
        - poc-ingress-nginx.convolab.ai
  rules:
    - host: poc-ingress-nginx.convolab.ai
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: eks-sample-linux-service
                port:
                  number: 3000
